--- a/css/index.css
+++ b/css/index.css
@@ -238,6 +238,52 @@ progress::-webkit-progress-value {
     }
 }
 
+.modal {
+    background-color: var(--bg-color);
+    border: solid 1px var(--text-color);
+    padding: 0;
+}
+
+.modalContainer {
+    padding: 16px;
+    display: grid;
+    grid-template-areas:
+            'header header'
+            'regionLabel region'
+            'realmLabel realm'
+            'charLabel char'
+            'button button';
+    gap: 10px 20px;
+}
+
+#loginModal h2 {
+    grid-area: header;
+}
+
+#regionLabel {
+    grid-area: regionLabel;
+}
+
+#regionSelect {
+    grid-area: region;
+}
+
+#realmLabel {
+    grid-area: realmLabel;
+}
+
+#realmSelect {
+    grid-area: realm;
+}
+
+#charLabel {
+    grid-area: charLabel;
+}
+
+#charText {
+    grid-area: char;
+}
+
 #loginModal .error {
     color: darkred;
     height: 25px;
@@ -266,6 +312,7 @@ progress::-webkit-progress-value {
 
 #loginModal input[type=text], #loginModal select, .modalButton {
     background-color: rgb(20, 20, 20);
+    color: var(--text-color);
     padding: 12px;
     border: none;
     box-shadow: inset 0 0 1px 1px rgba(255, 255, 255, 0.5);
